# wireviz-mcp

./: GEMINI.md  LICENSE  pyproject.toml
src/wireviz_mcp/: server.py  wireviz_examples.md
